Fixed vertical gap between cards.

--- a/styles/style.css
+++ b/styles/style.css
@@ -165,6 +165,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    row-gap: 25px;
     margin-top: 27px;
     list-style-type: none;
 }
@@ -228,6 +229,7 @@
     margin-top: 30px;
     padding-left: 40px;
     text-decoration: underline;
+    text-underline-offset: 5px;
 }
 
 .about {
